# smart_calculator

./: .gitignore  README.md
src/: Makefile  calc.c  docs.tex  s21_smart_calc.c  s21_smart_calc.h  stack.c  test.c
src/build-smart_calc-Desktop_arm_darwin_generic_mach_o_64bit-Debug/: CMakeCache.txt  cmake_install.cmake
src/build-smart_calc-Desktop_arm_darwin_generic_mach_o_64bit-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-c45b862f3dbd66c9ca30.json  codemodel-v2-c23c2a9ca6cb94159633.json  directory-.-Debug-39cc608ffd71408b1f18.json  index-2023-05-29T14-10-08-0474.json  target-smart_calc-Debug-1acba0d0521c71b6e3fb.json  target-smart_calc_autogen-Debug-7f6fa3d81cf837e5a96d.json
src/build-smart_calc-Desktop_arm_darwin_generic_mach_o_64bit-Debug/.qt/: QtDeploySupport.cmake
src/build-smart_calc-Desktop_arm_darwin_generic_mach_o_64bit-Debug/smart_calc_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d  moc_qcustomplot.cpp.d
src/qtfolder/Qcalc/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/qtfolder/build-Qcalc-Desktop_arm_darwin_generic_mach_o_64bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
src/qtfolder/build-Qcalc-Desktop_arm_darwin_generic_mach_o_64bit-Debug/.qt/: QtDeploySupport.cmake
src/qtfolder/build-Qcalc-Desktop_arm_darwin_generic_mach_o_64bit-Debug/Qcalc.app/Contents/: Info.plist
src/qtfolder/build-Qcalc-Desktop_arm_darwin_generic_mach_o_64bit-Debug/Qcalc.app/Contents/MacOS/: Qcalc
src/qtfolder/build-Qcalc-Desktop_arm_darwin_generic_mach_o_64bit-Debug/Qcalc_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
src/qtfolder/build-Qcalc-Desktop_arm_darwin_generic_mach_o_64bit-Debug/Qcalc_autogen/include/: ui_mainwindow.h
src/smart_calc/: CMakeLists.txt  calc.c  mainwindow.cpp  mainwindow.h  mainwindow.ui  s21_smart_calc.c  s21_smart_calc.h  stack.c
(+8 files in other folders)
